fix font issue on ie 11 and edge

--- a/resources/scss/_fonts.scss
+++ b/resources/scss/_fonts.scss
@@ -2,9 +2,10 @@
   font-family: 'knockout';
   font-weight: $global-weight-light;
   font-style: normal;
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-junior-light-weight.eot');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-junior-light-weight.otf') format('opentype');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-junior-light-weight.ttf') format('truetype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-light-weight.eot');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-light-weight.eot?#iefix') format('embedded-opentype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-light-weight.woff2') format('woff2');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-light-weight.woff') format('woff');
   font-display: swap;
 }
 
@@ -12,9 +13,10 @@
   font-family: 'knockout';
   font-weight: $global-weight-normal;
   font-style: normal;
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-junior-middle-weight.eot');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-junior-middle-weight.otf') format('opentype');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-junior-middle-weight.ttf') format('truetype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-middle-weight.eot');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-middle-weight.eot?#iefix') format('embedded-opentype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-middle-weight.woff2') format('woff2');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-junior-middle-weight.woff') format('woff');
   font-display: swap;
 }
 
@@ -22,9 +24,10 @@
   font-family: 'knockout';
   font-weight: $global-weight-medium;
   font-style: normal;
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-middle-weight.eot');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-middle-weight.otf') format('opentype');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-middle-weight.ttf') format('truetype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-middle-weight.eot');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-middle-weight.eot?#iefix') format('embedded-opentype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-middle-weight.woff2') format('woff2');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-middle-weight.woff') format('woff');
   font-display: swap;
 }
 
@@ -33,7 +36,8 @@
   font-family: 'knockout';
   font-weight: $global-weight-bold;
   font-style: normal;
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-welta-weight.eot');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-welta-weight.otf') format('opentype');
-  src: url('/wp-content/themes/ipinclusive/assets/fonts/Knockout-welta-weight.ttf') format('truetype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-welta-weight.eot');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-welta-weight.eot?#iefix') format('embedded-opentype');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-welta-weight.woff2') format('woff2');
+  src: url('/wp-content/themes/ipinclusive/assets/fonts/knockout/Knockout-welta-weight.woff') format('woff');
 }
